[project]
name = "komar2017"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "eEngine Stuszken team", email = "poliakustyczny@gmail.com"},
]
dependencies = [
    "pygame>=2.5.2",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
