[project]
name = "komar2017"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "eEngine Stuszken team", email = "poliakustyczny@gmail.com"},
]
dependencies = [
    "pygame==1.9.4",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pyinstaller>=6.5.0",
]
